# unified-agent-api

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_AGENTS_MIGRATION_PLAN.md  Makefile  ORCH_PLAN.md  PLAN.md  README.md  TODOS.md  contradictions-audit.report.json  contradictions-audit.report.md  contradictions-audit.scan.json
crates/agent_api/: Cargo.toml  README.md
crates/agent_api/src/: agent_kind.rs  backend_harness.rs  bounds.rs  lib.rs  mcp.rs  run_handle_gate.rs  runtime_support.rs  runtime_support_data.rs
crates/agent_api/tests/: c0_core_contract.rs  c1_aider_runtime_follow_on.rs  c1_claude_exec_policy.rs  c1_claude_live_events.rs  c1_codex_exec_policy.rs  c1_codex_stream_exec_adapter.rs  c1_external_sandbox_validation.rs  c2_claude_session_resume_v1.rs  c2_codex_session_resume_v1.rs  c2_codex_stream_exec_parity.rs  c3_explicit_cancellation.rs  c3_explicit_cancellation_claude_code.rs  c4_claude_session_fork_v1.rs  c4_session_fork_v1_codex.rs  c5_claude_add_dirs_runtime_rejection.rs  c5_mcp_management_v1.rs  c6_codex_add_dirs_preflight_rejection.rs  runtime_support_codex.rs  runtime_support_metadata_default.rs  session_fork_v1_codex.rs
crates/aider/: Cargo.toml  LICENSE-MIT  README.md
crates/aider/src/: builder.rs  client.rs  error.rs  lib.rs  stream_json.rs  wrapper_coverage_manifest.rs
crates/claude_code/: Cargo.toml  EXAMPLES.md  README.md
crates/claude_code/examples/: claude_home.rs  doctor.rs  env_binary.rs  help_version.rs  mcp_list.rs  mcp_manage.rs  mirror_output.rs  multi_turn_continue.rs  multi_turn_fork.rs  multi_turn_no_session_persistence.rs  multi_turn_resume.rs  plugin_manage.rs  print_agents.rs  print_allow_dangerously_skip_permissions.rs  print_betas.rs  print_chrome_flags.rs  print_debug_file.rs  print_disable_slash_commands.rs  print_file_resources.rs  print_from_pr.rs  print_ide.rs  print_include_partial_messages.rs  print_json.rs  print_json_schema.rs  print_mcp_config.rs  print_model_fallback_budget.rs  print_plugin_dirs.rs  print_session_id.rs  print_settings_sources.rs  print_stdin_text.rs  print_stream_json.rs  print_stream_json_extract_text.rs  print_stream_json_replay_user_messages.rs  print_system_prompts.rs  print_text.rs  print_tools_disallowed.rs  print_tools_safe_bash.rs  print_verbose.rs  setup_token_flow.rs  update.rs
crates/claude_code/src/: lib.rs  process.rs  stream_json.rs
crates/claude_code/tests/: examples_manifest.rs  print_flags_manifest.rs  print_flows_manifest.rs  run_command_timeout_reaps_child.rs  setup_token_timeout_reaps_child.rs  stream_json_contract.rs  stream_json_session_id_accessor.rs  stream_json_streaming.rs  support_paths.rs
crates/codex/: Cargo.toml  EXAMPLES.md  README.md
crates/codex/examples/: app_server_thread_turn.rs  app_server_turns.rs  auth_flow.rs  bundled_binary.rs  bundled_binary_home.rs  capability_snapshot.rs  cli_overrides.rs  cloud_tasks.rs  codex_home.rs  color_always.rs  debug_cmd.rs  env_binary.rs  examples_manifest.json  exec_resume_apply_wrapper.rs  execpolicy_check.rs  feature_detection.rs  features_cmd.rs  features_toggle.rs  filter_rollout_event_msg.rs  help_scopes.rs  image_json.rs  json_stream.rs  mcp_codex_flow.rs  mcp_codex_reply.rs  mcp_codex_tool.rs  mcp_manage.rs  no_stdout_mirror.rs  parse_rollout_jsonl.rs  plugin_cmd.rs  quiet.rs  resume_apply.rs  review_commands.rs  run_sandbox.rs  select_model.rs  send_prompt.rs  server_helpers.rs  session_commands.rs  stream_events.rs  stream_last_message.rs  stream_with_log.rs  (+5 more)
crates/codex/src/: auth.rs  client_core.rs  events.rs  exec.rs  execpolicy.rs  lib.rs  version.rs  wrapper_coverage_manifest.rs
crates/codex/tests/: cli_e2e.rs  examples_manifest.rs  jsonl_compat.rs  jsonl_parser_api.rs  new_cli_surfaces.rs  support_paths.rs  thread_event_accessors.rs
crates/gemini_cli/: Cargo.toml  README.md
crates/gemini_cli/src/: builder.rs  client.rs  error.rs  lib.rs  stream_json.rs
crates/gemini_cli/tests/: stream_json_contract.rs  stream_json_streaming.rs  support_paths.rs
crates/opencode/: Cargo.toml  README.md
crates/opencode/src/: builder.rs  client.rs  error.rs  lib.rs  run_json.rs
crates/opencode/tests/: run_json_contract.rs  run_json_lines.rs  run_json_streaming.rs  run_json_timeout_reaps_child.rs  support_paths.rs
crates/wrapper_events/: Cargo.toml  README.md
crates/wrapper_events/src/: normalized.rs
crates/xtask/: Cargo.toml
crates/xtask/data/: agent_registry.toml
crates/xtask/src/: agent_api_backend_type_leak_guard.rs  agent_lifecycle.rs  agent_registry.rs  approval_artifact.rs  capability_matrix.rs  capability_matrix_audit.rs  capability_projection.rs  capability_publication.rs  claude_wrapper_coverage.rs  close_proving_run.rs  codex_validate.rs  codex_version_metadata.rs  codex_wrapper_coverage.rs  historical_lifecycle_backfill.rs  lib.rs  main.rs  onboard_agent.rs  prepare_proving_run_closeout.rs  prepare_publication.rs  proving_run_closeout.rs  publication_refresh.rs  recommend_next_agent_research.rs  release_doc.rs  repair_runtime_evidence.rs  root_intake_layout.rs  runtime_evidence_bundle.rs  runtime_evidence_run.rs  runtime_follow_on.rs  support_matrix.rs  version_bump.rs  workspace_mutation.rs  wrapper_coverage_shared.rs  wrapper_scaffold.rs
crates/xtask/templates/: runtime_follow_on_codex_prompt.md
crates/xtask/tests/: agent_api_backend_type_leak_guard.rs  agent_lifecycle_state.rs  agent_maintenance_closeout.rs  agent_maintenance_drift.rs  agent_maintenance_execute.rs  agent_maintenance_prepare.rs  agent_maintenance_refresh.rs  agent_maintenance_watch.rs  agent_registry.rs  c0_spec_validate.rs  c1_spec_union.rs  c2_spec_wrapper_coverage.rs  c3_spec_reports_metadata_retain.rs  c4_spec_ci_wiring.rs  c5_spec_iu_subtree_inheritance.rs  c6_spec_report_iu_validator.rs  c7_spec_iu_roots_adoption.rs  c8_capability_matrix_unit.rs  c8_spec_capability_matrix_parity.rs  c8_spec_capability_matrix_paths.rs  c8_spec_capability_matrix_staleness.rs  c9_spec_version_bump.rs  historical_lifecycle_backfill_entrypoint.rs  onboard_agent_closeout_preview.rs  onboard_agent_entrypoint.rs  (+14 more)
(+1452 files in other folders)
