[package]
name = "agent_api"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Agent-agnostic facade and registry for wrapper backends"
license = "MIT OR Apache-2.0"

[features]
default = []
codex = ["dep:codex", "dep:tokio", "dep:futures-util"]
claude_code = ["dep:claude_code", "dep:tokio", "dep:futures-util"]

[dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2"

codex = { path = "../codex", optional = true }
claude_code = { path = "../claude_code", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
