[package]
name = "unified-agent-api"
version.workspace = true
edition = "2021"
rust-version = "1.78"
description = "Agent-agnostic facade and registry for wrapper backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomize-hq/unified-agent-api"
homepage = "https://github.com/atomize-hq/unified-agent-api"
documentation = "https://docs.rs/unified-agent-api"
readme = "README.md"

[lib]
name = "agent_api"

[features]
default = []
codex = ["dep:codex", "dep:tokio", "dep:futures-util"]
claude_code = ["dep:claude_code", "dep:tokio", "dep:futures-util"]
opencode = ["dep:opencode", "dep:tokio", "dep:futures-util"]

[dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2"

codex = { package = "unified-agent-api-codex", path = "../codex", version = "=0.2.3", optional = true }
claude_code = { package = "unified-agent-api-claude-code", path = "../claude_code", version = "=0.2.3", optional = true }
opencode = { package = "unified-agent-api-opencode", path = "../opencode", version = "=0.2.3", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
