[package]
name = "unified-agent-api-claude-code"
version.workspace = true
edition = "2021"
rust-version = "1.78"
description = "Async wrapper around the Claude Code CLI for non-interactive prompting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomize-hq/unified-agent-api"
keywords = ["claude", "cli", "wrapper", "agent"]
categories = ["api-bindings", "command-line-interface"]
readme = "README.md"

[lib]
name = "claude_code"

[dependencies]
futures-core = "0.3"
tokio = { workspace = true, features = ["process", "io-util", "io-std", "macros", "rt", "rt-multi-thread", "time", "sync", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
portable-pty = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
futures-util = "0.3"
