[package]
name = "unified-agent-api-gemini-cli"
version.workspace = true
edition = "2021"
rust-version = "1.78"
description = "Async wrapper around the Gemini CLI for headless stream-json flows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomize-hq/unified-agent-api"
homepage = "https://github.com/atomize-hq/unified-agent-api"
documentation = "https://docs.rs/unified-agent-api-gemini-cli"
keywords = ["gemini", "cli", "wrapper", "agent"]
categories = ["api-bindings", "command-line-interface"]

[lib]
name = "gemini_cli"

[dependencies]
futures-core = "0.3"
tokio = { workspace = true, features = ["process", "io-util", "io-std", "macros", "rt", "rt-multi-thread", "time", "sync", "fs"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
futures-util = "0.3"
