[package]
name = "unified-agent-api-wrapper-events"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared ingestion primitives for unified-agent-api wrapper JSONL and NDJSON outputs"
repository = "https://github.com/atomize-hq/unified-agent-api"
readme = "README.md"
keywords = ["agent", "events", "jsonl", "ndjson"]
categories = ["parsing", "api-bindings"]

[lib]
name = "wrapper_events"

[features]
default = []
codex = ["dep:codex"]
claude_code = ["dep:claude_code"]
tokio = ["dep:tokio", "tokio/io-util", "tokio/macros", "tokio/rt"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

codex = { package = "unified-agent-api-codex", path = "../codex", version = "=0.2.0", optional = true }
claude_code = { package = "unified-agent-api-claude-code", path = "../claude_code", version = "=0.2.0", optional = true }
tokio = { workspace = true, optional = true }
