[package]
name = "xtask"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
agent_api = { package = "unified-agent-api", path = "../agent_api", features = ["codex", "claude_code", "opencode"] }
clap = { version = "4.5", features = ["derive"] }
codex = { package = "unified-agent-api-codex", path = "../codex" }
claude_code = { package = "unified-agent-api-claude-code", path = "../claude_code" }
hex = "0.4"
jsonschema = { version = "0.18", features = ["draft202012"] }
regex = "1.10"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml_edit = "0.22"
wait-timeout = "0.2"
